-- TripSync schema (PostgreSQL, Django-style migrations)
-- Standard BigAutoField (bigint) primary keys. "auth_user" below is the logical
-- name for the custom user model auth_user_app.Auth_User (table auth_user_app_auth_user,
-- bigint pk), so every user_id FK is BIGINT.
--
-- Derived values are computed in queries, never stored (see README
-- "Design Decisions"):
--   * group member count = COUNT of the group's memberships
--   * trip total cost    = SUM of the trip's activities.cost_estimate_cents

BEGIN;

CREATE TABLE "groups" (
    "id"         BIGINT       NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "name"       VARCHAR(255) NOT NULL,
    "created_on" DATE         NOT NULL,
    PRIMARY KEY ("id")
);

CREATE TABLE "trips" (
    "id"       BIGINT       NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "group_id" BIGINT       NOT NULL,
    "name"     VARCHAR(255) NOT NULL,
    "city"     VARCHAR(255) NOT NULL,
    "state"    VARCHAR(255) NOT NULL,
    "zip"      VARCHAR(255) NOT NULL DEFAULT '',  -- optional at the API; '' when not given
    "country"  VARCHAR(255) NOT NULL,
    PRIMARY KEY ("id"),
    CONSTRAINT "trips_group_id_fk" FOREIGN KEY ("group_id")
        REFERENCES "groups" ("id") ON DELETE CASCADE
);

-- Table and column names below are logical. Django creates the physical
-- names activities_app_activity, activities_app_activitygeocode, activities_app_lodging,
-- activities_app_activityvote, trip_app_trip and auth_user_app_auth_user;
-- no model sets db_table.
-- NOTE: trip_app_trip currently has no group_id and uses VARCHAR(60) for city/state/country;
-- groups/memberships are modelled as group_app_group (OneToOne trip + M2M users). Reconciling
-- that with the trips/groups/memberships blocks here is an open team decision (see README
-- Design Decisions and the activities PR).

CREATE TABLE "activities" (
    "id"                  BIGINT       NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "trip_id"             BIGINT       NOT NULL,
    "name"                VARCHAR(255) NOT NULL,
    -- street..country are optional at the API (README "manual-address fallback");
    -- '' is stored when omitted, so the columns stay NOT NULL.
    "street"              VARCHAR(255) NOT NULL,
    "city"                VARCHAR(255) NOT NULL,
    "state"               VARCHAR(255) NOT NULL,
    "zip"                 VARCHAR(255) NOT NULL,
    "country"             VARCHAR(255) NOT NULL,
    -- Google's Place ID for the resolved location, written by the server
    -- from the Geocoding result; '' when the activity has no location.
    "place_id"            VARCHAR(255) NOT NULL,
    "cost_estimate_cents" INTEGER      NOT NULL DEFAULT 0,
    "description"         VARCHAR(255) NOT NULL,
    "created_at"          TIMESTAMPTZ  NOT NULL DEFAULT now(),
    "updated_at"          TIMESTAMPTZ  NOT NULL DEFAULT now(),
    PRIMARY KEY ("id"),
    CONSTRAINT "activities_trip_id_fk" FOREIGN KEY ("trip_id")
        REFERENCES "trips" ("id") ON DELETE CASCADE
);

-- Google Geocoding's answer for an activity's location. One row per located
-- activity; absent when the activity has no address/place. Server-written only.
CREATE TABLE "activity_geocodes" (
    "id"                BIGINT       NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "activity_id"       BIGINT       NOT NULL UNIQUE,
    "latitude"          NUMERIC(9,6) NOT NULL,
    "longitude"         NUMERIC(9,6) NOT NULL,
    "formatted_address" VARCHAR(255) NOT NULL,
    "created_at"        TIMESTAMPTZ  NOT NULL DEFAULT now(),
    PRIMARY KEY ("id"),
    CONSTRAINT "activity_geocodes_activity_id_fk" FOREIGN KEY ("activity_id")
        REFERENCES "activities" ("id") ON DELETE CASCADE
);

-- Where the group is staying. One row per trip; the map centers here and
-- place search is biased here. Address text is the user's; the pin is Google's.
CREATE TABLE "lodgings" (
    "id"                BIGINT       NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "trip_id"           BIGINT       NOT NULL UNIQUE,
    "name"              VARCHAR(255) NOT NULL,
    "street"            VARCHAR(255) NOT NULL,
    "city"              VARCHAR(255) NOT NULL,
    "state"             VARCHAR(255) NOT NULL,
    "zip"               VARCHAR(255) NOT NULL,
    "country"           VARCHAR(255) NOT NULL,
    "place_id"          VARCHAR(255) NOT NULL,
    "latitude"          NUMERIC(9,6) NOT NULL,
    "longitude"         NUMERIC(9,6) NOT NULL,
    "formatted_address" VARCHAR(255) NOT NULL,
    "created_at"        TIMESTAMPTZ  NOT NULL DEFAULT now(),
    "updated_at"        TIMESTAMPTZ  NOT NULL DEFAULT now(),
    PRIMARY KEY ("id"),
    CONSTRAINT "lodgings_trip_id_fk" FOREIGN KEY ("trip_id")
        REFERENCES "trips" ("id") ON DELETE CASCADE
);

CREATE TABLE "memberships" (
    "id"           BIGINT  NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "user_id"      BIGINT  NOT NULL,
    "group_id"     BIGINT  NOT NULL,
    "read_access"  BOOLEAN NOT NULL DEFAULT TRUE,
    "write_access" BOOLEAN NOT NULL DEFAULT FALSE,
    "is_leader"    BOOLEAN NOT NULL DEFAULT FALSE,
    PRIMARY KEY ("id"),
    CONSTRAINT "unique_user_group" UNIQUE ("user_id", "group_id"),
    CONSTRAINT "memberships_user_id_fk" FOREIGN KEY ("user_id")
        REFERENCES "auth_user" ("id") ON DELETE CASCADE,
    CONSTRAINT "memberships_group_id_fk" FOREIGN KEY ("group_id")
        REFERENCES "groups" ("id") ON DELETE CASCADE
);

CREATE TABLE "trip_votes" (
    "id"         BIGINT      NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "user_id"    BIGINT      NOT NULL,
    "trip_id"    BIGINT      NOT NULL,
    "created_at" TIMESTAMPTZ NOT NULL DEFAULT now(),
    PRIMARY KEY ("id"),
    -- Blocks double-voting the same trip. The stricter business rule -- one
    -- trip vote per user per GROUP -- lives in the API layer: casting a trip
    -- vote replaces the user's existing vote within that group.
    CONSTRAINT "unique_user_trip_vote" UNIQUE ("user_id", "trip_id"),
    CONSTRAINT "trip_votes_user_id_fk" FOREIGN KEY ("user_id")
        REFERENCES "auth_user" ("id") ON DELETE CASCADE,
    CONSTRAINT "trip_votes_trip_id_fk" FOREIGN KEY ("trip_id")
        REFERENCES "trips" ("id") ON DELETE CASCADE
);

CREATE TABLE "activity_votes" (
    "id"          BIGINT      NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "user_id"     BIGINT      NOT NULL,
    "activity_id" BIGINT      NOT NULL,
    "created_at"  TIMESTAMPTZ NOT NULL DEFAULT now(),
    PRIMARY KEY ("id"),
    CONSTRAINT "unique_user_activity_vote" UNIQUE ("user_id", "activity_id"),
    CONSTRAINT "activity_votes_user_id_fk" FOREIGN KEY ("user_id")
        REFERENCES "auth_user" ("id") ON DELETE CASCADE,
    CONSTRAINT "activity_votes_activity_id_fk" FOREIGN KEY ("activity_id")
        REFERENCES "activities" ("id") ON DELETE CASCADE
);

-- Foreign key indexes (Django creates these automatically for each FK).
CREATE INDEX "trips_group_id_idx"             ON "trips"          ("group_id");
CREATE INDEX "activities_trip_id_idx"         ON "activities"     ("trip_id");
CREATE INDEX "memberships_group_id_idx"       ON "memberships"    ("group_id");
CREATE INDEX "trip_votes_trip_id_idx"         ON "trip_votes"     ("trip_id");
CREATE INDEX "activity_votes_activity_id_idx" ON "activity_votes" ("activity_id");
-- user_id columns: Django also emits a plain FK index on each; the unique constraints above
-- make it redundant, so it is omitted here.
-- activity_geocodes.activity_id and lodgings.trip_id need no index line: their UNIQUE
-- constraint (OneToOneField) is the index.

COMMIT;
