%% TripSync ERD — source of truth is ERD.sql; keep this file in sync with it.
%% Regenerate the PNG with:
%%   npx -y -p @mermaid-js/mermaid-cli mmdc -i resources/erd.mmd -o resources/travel_planner_erd.png -b white -s 2
erDiagram
    GROUPS ||--o{ TRIPS : has
    TRIPS ||--o{ ACTIVITIES : has
    AUTH_USER ||--o{ MEMBERSHIPS : has
    GROUPS ||--o{ MEMBERSHIPS : "has members"
    AUTH_USER ||--o{ TRIP_VOTES : casts
    TRIPS ||--o{ TRIP_VOTES : receives
    AUTH_USER ||--o{ ACTIVITY_VOTES : casts
    ACTIVITIES ||--o{ ACTIVITY_VOTES : receives
    ACTIVITIES ||--o| ACTIVITY_GEOCODES : "pinned at"
    TRIPS ||--o| LODGINGS : "stays at"

    AUTH_USER {
        bigint id PK
        string username
        string email
    }
    GROUPS {
        bigint id PK
        string name
        date created_on
    }
    MEMBERSHIPS {
        bigint id PK
        bigint user_id FK
        bigint group_id FK
        boolean read_access
        boolean write_access
        boolean is_leader
    }
    TRIPS {
        bigint id PK
        bigint group_id FK
        string name
        string city
        string state
        string zip
        string country
    }
    ACTIVITIES {
        bigint id PK
        bigint trip_id FK
        string name
        string street
        string city
        string state
        string zip
        string country
        string place_id
        integer cost_estimate_cents
        string description
        timestamptz created_at
        timestamptz updated_at
    }
    ACTIVITY_GEOCODES {
        bigint id PK
        bigint activity_id FK
        decimal latitude
        decimal longitude
        string formatted_address
        timestamptz created_at
    }
    LODGINGS {
        bigint id PK
        bigint trip_id FK
        string name
        string street
        string city
        string state
        string zip
        string country
        string place_id
        decimal latitude
        decimal longitude
        string formatted_address
        timestamptz created_at
        timestamptz updated_at
    }
    TRIP_VOTES {
        bigint id PK
        bigint user_id FK
        bigint trip_id FK
        timestamptz created_at
    }
    ACTIVITY_VOTES {
        bigint id PK
        bigint user_id FK
        bigint activity_id FK
        timestamptz created_at
    }
